--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Test
         run: go test -race -tags fast -coverprofile unit.txt -covermode atomic ./...
       - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           file: ./unit.txt
           flags: unit,${{ matrix.os }},${{ matrix.go-version }}
           name: unit
