--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,8 +11,8 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        go-version: [1.16.x, 1.19.x, 1.20.x]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        go-version: [1.19.x, 1.20.x]
+        os: [ubuntu-latest]
     env:
       OS: ${{ matrix.os }}
       GO: ${{ matrix.go-version }}
